terraform/vpc.tf
//VPC

resource "aws_vpc" "terraform_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    vpc = "terraform_vpc"
  }
}
